@@ -371,6 +371,37 @@ $EXE +proj=latlong +ellps=sphere \
 3820138.08 2888664.15
 EOF
 #
+echo "##############################################################" >> ${OUT}
+echo "Test the natural earth projection" >> ${OUT}
+$EXE +proj=latlong +a=1 +lon_0=0 \
+ +to +proj=natearth +a=6371008.7714 +b=6371008.7714 -f '%.'7'f' \
+ -E >>${OUT} <<EOF
+0.0 0.0 0 0.0 0.0
+0.0 22.5 0 0.0 2525419.569383768
+0.0 45.0 0 0.0 5052537.389973222
+0.0 67.5 0 0.0 7400065.6562573705
+0.0 90.0 0 0.0 9062062.394736718
+45.0 0.0 0 4356790.016612169 0.0
+45.0 22.5 0 4253309.544984069 2525419.569383768
+45.0 45.0 0 3924521.5829515466 5052537.389973222
+45.0 67.5 0 3354937.47115583 7400065.6562573705
+45.0 90.0 0 2397978.2448443635 9062062.394736718
+90.0 0.0 0 8713580.033224339 0.0
+90.0 22.5 0 8506619.089968137 2525419.569383768
+90.0 45.0 0 7849043.165903093 5052537.389973222
+90.0 67.5 0 6709874.94231166 7400065.6562573705
+90.0 90.0 0 4795956.489688727 9062062.394736718
+135.0 0.0 0 1.3070370049836507E7 0.0
+135.0 22.5 0 1.2759928634952208E7 2525419.569383768
+135.0 45.0 0 1.177356474885464E7 5052537.389973222
+135.0 67.5 0 1.0064812413467491E7 7400065.6562573705
+135.0 90.0 0 7193934.734533091 9062062.394736718
+180.0 0.0 0 1.7427160066448677E7 0.0
+180.0 22.5 0 1.7013238179936275E7 2525419.569383768
+180.0 45.0 0 1.5698086331806187E7 5052537.389973222
+180.0 67.5 0 1.341974988462332E7 7400065.6562573705
+180.0 90.0 0 9591912.979377454 9062062.394736718
+EOF
 ##############################################################################
 # Done! 
 # do 'diff' with distribution results
